tests/NormalTests/paczka1/small_fuzzy/78099033.err
Error in line 2: IknjcUbo3 S668 55,2
Error in line 4: 8fYuvZdTnS S668 80,3
Error in line 7: PxfsRZnxI3 S668 94,2
